--- a/package.json
+++ b/package.json
@@ -59,5 +59,12 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "node-sass": "^4.14.1",
+    "terra-action-footer": "^2.52.0",
+    "terra-action-header": "^2.56.0",
+    "terra-card": "^3.34.0",
+    "terra-form-textarea": "^5.3.0"
+  }
 }
