--- a/package.json
+++ b/package.json
@@ -62,9 +62,19 @@
   ],
   "dependencies": {
     "node-sass": "^4.14.1",
+    "react-intl": "^5.8.2",
     "terra-action-footer": "^2.52.0",
     "terra-action-header": "^2.56.0",
+    "terra-base": "^5.39.0",
+    "terra-button": "^3.47.0",
     "terra-card": "^3.34.0",
-    "terra-form-textarea": "^5.3.0"
+    "terra-clinical-item-display": "^4.1.0",
+    "terra-clinical-label-value-view": "^3.22.0",
+    "terra-date-input": "^1.18.0",
+    "terra-date-picker": "^4.47.0",
+    "terra-form-radio": "^4.15.0",
+    "terra-form-select": "^6.16.0",
+    "terra-form-textarea": "^5.3.0",
+    "terra-icon": "^3.36.0"
   }
 }
